--- a/Containers/app/src/main/res/layout/fragment_linear_layout.xml
+++ b/Containers/app/src/main/res/layout/fragment_linear_layout.xml
@@ -52,9 +52,9 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Linear lgravity right"
-        android:gravity="center"
         android:layout_gravity="right"
+        android:background="@color/purple_200"
+        android:gravity="center"
         android:padding="10dp"
-        android:background="@color/purple_200"/>
+        android:text="Linear lgravity right" />
 </LinearLayout>
